docs/dolfin/1.1.0/python/source/programmers-reference/cpp/fem/index.rst
.. Index file for the dolfin.cpp.fem module.

.. _programmers_reference_cpp_fem_index:

dolfin.cpp.fem module
*********************

Classes:

.. toctree::
    :maxdepth: 1

    AdaptiveLinearVariationalSolver
    AdaptiveNonlinearVariationalSolver
    Assembler
    AssemblerBase
    BarycenterQuadrature
    BasisFunction
    BoundaryCondition
    DirichletBC
    DofMap
    Equation
    ErrorControl
    Extrapolation
    FiniteElement
    Form
    GenericAdaptiveVariationalSolver
    GenericDofMap
    HierarchicalDirichletBC
    HierarchicalErrorControl
    HierarchicalForm
    HierarchicalFunction
    HierarchicalFunctionSpace
    HierarchicalLinearVariationalProblem
    HierarchicalMesh
    HierarchicalMeshFunctionBool
    HierarchicalMeshFunctionDouble
    HierarchicalMeshFunctionInt
    HierarchicalMeshFunctionSizet
    HierarchicalMeshFunctionUInt
    HierarchicalNonlinearVariationalProblem
    LinearVariationalProblem
    LinearVariationalSolver
    LocalAssembler
    NonlinearVariationalProblem
    NonlinearVariationalSolver
    OpenMpAssembler
    PeriodicBC
    PointSource
    SparsityPatternBuilder
    SymmetricAssembler
    SystemAssembler
    TimeSeries
    VariationalProblem

Functions:

.. toctree::
    :maxdepth: 1

    DirichletBC_default_parameters
    ErrorControl_default_parameters
    Extrapolation_extrapolate
    GenericAdaptiveVariationalSolver_default_parameters
    LinearVariationalSolver_default_parameters
    LocalAssembler_assemble
    LocalAssembler_assemble_cell
    LocalAssembler_assemble_exterior_facet
    LocalAssembler_assemble_interior_facet
    NonlinearVariationalSolver_default_parameters
    SparsityPatternBuilder_build
    TimeSeries_default_parameters
    TimeSeries_filename_data
    TimeSeries_filename_times
    adapt
    adapt_markers
    assemble
    assemble_system
    dorfler_mark
    fem_solve
    mark
    symmetric_assemble

Module docstring:

.. automodule:: dolfin.cpp.fem
   :no-members:
   :no-undoc-members:
   :no-show-inheritance: